# ChangeLog for xfce-base/xfce4-session
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  09 Nov 2008; Christoph Mende <angelos@gentoo.org>
  xfce4-session-9999.ebuild:
  Fix dependencies, dbus is mandatory now

  23 Jun 2008; Christoph Mende <angelos@gentoo.org>
  xfce4-session-9999.ebuild:
  Migrated from mcs to xfconf

  18 Dec 2007; Christoph Mende <angelos@gentoo.org>
  xfce4-session-9999.ebuild:
  Added missing intltool dependency

  06 Jun 2007; Christoph Mende <angelos@gentoo.org> ChangeLog:
  Initial ChangeLog
