@@ -1,13 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
+DIST xfce4-session-4.5.92.tar.bz2 1332462 RMD160 486f00eef66cf2d43a62e857af8ad034cdaf0b73 SHA1 e86b2affe1b2b88bb18c6dfeb0d410e85420789d SHA256 49be644f0f9783b3a154ea69346bcf817ac94fe18b0bfb06866fccb0e45f2dce
+EBUILD xfce4-session-4.5.92.ebuild 826 RMD160 c8b2dd6c7cf043b24203a05cb4f881f2fe2cd5e6 SHA1 dd9803fb375f568d0b1c32b1ed2675cc1ed7829d SHA256 9f82863591a5b59f70fd4a81e1a48023f3710a906dd0f32ada844ca3291e8fa1
 EBUILD xfce4-session-9999.ebuild 826 RMD160 c8b2dd6c7cf043b24203a05cb4f881f2fe2cd5e6 SHA1 dd9803fb375f568d0b1c32b1ed2675cc1ed7829d SHA256 9f82863591a5b59f70fd4a81e1a48023f3710a906dd0f32ada844ca3291e8fa1
-MISC ChangeLog 562 RMD160 ae48acb4e93ec1bc7b47daea8baaf2ceb87fc763 SHA1 41811e4bfbde2ce36749f9e05210d014ee4b354e SHA256 961803610679faf6c7221a0df489859efc1e8f9ee2ae84d80a1b1326e5b10300
+MISC ChangeLog 707 RMD160 3aac9e6ba0cbe97c1cce6ed9e6e5a4c2b339a359 SHA1 40e795d168a5f8d1936a6b9d7521c397b4df3e0d SHA256 5fb98e49937d543f3f6d649526bee7828905779b7b95838205dfc53368dfd131
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkkXXcwACgkQKhnDs22gwa9SjQCeJ9qNQ7RyMSGB6mY1kUVHb3Jz
-FZ4AoJq+0Sl+0m7a3Rz9VOmZWh/DXSmN
-=ytm2
+iEYEARECAAYFAkkdtkEACgkQKhnDs22gwa830wCg+wGB9QVgErfpX8R68UGlguMl
+zXkAoNz9h5zmlWjBiw6ucUvHpNLZNWST
+=5UjZ
 -----END PGP SIGNATURE-----
