@@ -2,6 +2,12 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*xfce4-session-4.5.92 (14 Nov 2008)
+
+  14 Nov 2008; Christoph Mende <angelos@gentoo.org>
+  +xfce4-session-4.5.92.ebuild:
+  Xfce-4.6 Beta 2 bump
+
   09 Nov 2008; Christoph Mende <angelos@gentoo.org>
   xfce4-session-9999.ebuild:
   Fix dependencies, dbus is mandatory now
